--- a/res/layout/activity_kalendarz.xml
+++ b/res/layout/activity_kalendarz.xml
@@ -11,10 +11,11 @@
     android:gravity="center"
      >
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/kalendarz" />
+    <FrameLayout
+        android:id="@+id/kontener"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        />
 
 
 
