--- a/res/layout/fragment_kalendarz.xml
+++ b/res/layout/fragment_kalendarz.xml
@@ -4,9 +4,25 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
-    <TextView
+    <com.squareup.timessquare.CalendarPickerView
+        android:id="@+id/calendar_view"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="60" />
+
+    
+    <LinearLayout 
+       android:layout_width="match_parent"
+       android:layout_height="0dp"
+       android:layout_weight="40"
+       android:gravity="center" 
+        >
+    <Button
+        android:id="@+id/pokazListeTras"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="kalendarzFragment" />
+        android:text="@string/pokazListeTras" />
+    
+    </LinearLayout>
 
 </LinearLayout>
