--- a/res/menu/main.xml
+++ b/res/menu/main.xml
@@ -6,7 +6,10 @@
     <item
         android:id="@+id/action_settings"
         android:orderInCategory="100"
+         android:icon="@drawable/ic_launcher"
         android:title="@string/action_settings"
         app:showAsAction="never"/>
+    
+       
 
 </menu>
