--- a/res/layout/fragment_lista_tras.xml
+++ b/res/layout/fragment_lista_tras.xml
@@ -8,20 +8,29 @@
         android:id="@+id/listView"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="60" 
+        android:layout_weight="80" 
         >
     </ListView>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="40"
+        android:layout_weight="20"
+        android:orientation="vertical"
         android:gravity="center" >
 
-        <TextView
+<!--         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="listatras" />
+            android:text="listatras" /> -->
+        
+        <Button 
+            android:id="@+id/dodajTrase"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="DODAJ TRASE"
+            />
+        
     </LinearLayout>
 
 </LinearLayout>
