--- a/res/layout/activity_ustawienia.xml
+++ b/res/layout/activity_ustawienia.xml
@@ -11,7 +11,7 @@
     android:gravity="center"
      >
 
-    <TextView
+    <pl.kilometrowka.components.ExTextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/ustawienia" />
