--- a/res/layout/fragment_kalendarz.xml
+++ b/res/layout/fragment_kalendarz.xml
@@ -8,19 +8,19 @@
         android:id="@+id/calendar_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="60" />
+        android:layout_weight="90" />
 
     
-    <LinearLayout 
-       android:layout_width="match_parent"
+   <LinearLayout 
+       android:layout_width="fill_parent"
        android:layout_height="0dp"
-       android:layout_weight="40"
+       android:layout_weight="10"
        android:gravity="center" 
         >
     <Button
         android:id="@+id/pokazListeTras"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:text="@string/pokazListeTras" />
     
     </LinearLayout>
