--- a/res/layout/fragment_lista_tras.xml
+++ b/res/layout/fragment_lista_tras.xml
@@ -19,7 +19,7 @@
         android:orientation="vertical"
         android:gravity="center" >
 
-<!--         <TextView
+<!--         <pl.kilometrowka.components.ExTextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="listatras" /> -->
