--- a/res/layout/row_trasa.xml
+++ b/res/layout/row_trasa.xml
@@ -4,109 +4,101 @@
     android:layout_height="match_parent"
     android:orientation="horizontal" >
 
-    
-   <LinearLayout 
-       android:layout_height="match_parent"
-       android:orientation="vertical"
-       android:layout_width="wrap_content"
-       
-       >
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" >
+        android:layout_height="match_parent"
+        android:orientation="vertical" >
 
-        <TextView
-            android:id="@+id/trasaTxt"
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" >
+
+            <pl.kilometrowka.components.ExTextView
+                android:id="@+id/trasaTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/trasa" />
+
+            <pl.kilometrowka.components.ExTextView
+                android:id="@+id/trasaa"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/trasaTxt" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/trasa" />
+            android:layout_marginTop="5dp" >
 
-        <TextView
-            android:id="@+id/trasaa"
+            <pl.kilometrowka.components.ExTextView
+                android:id="@+id/kmTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/km" />
+
+            <pl.kilometrowka.components.ExTextView
+                android:id="@+id/km"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/kmTxt" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/trasaTxt"
-             />
-    </RelativeLayout>
+            android:layout_marginTop="5dp" >
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp" >
+            <pl.kilometrowka.components.ExTextView
+                android:id="@+id/samochodTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/samochod" />
 
-        <TextView
-            android:id="@+id/kmTxt"
+            <pl.kilometrowka.components.ExTextView
+                android:id="@+id/samochod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/samochodTxt" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="@string/km" />
+            android:layout_marginBottom="10dp"
+            android:layout_marginTop="5dp" >
 
-        <TextView
-            android:id="@+id/km"
+            <pl.kilometrowka.components.ExTextView
+                android:id="@+id/dataTxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/data" />
+
+            <pl.kilometrowka.components.ExTextView
+                android:id="@+id/data"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:layout_toRightOf="@+id/dataTxt" />
+        </RelativeLayout>
+    </LinearLayout>
+
+   <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_gravity="top|left"
+        android:gravity="top|right"
+        android:orientation="vertical" >
+        
+        <ImageButton android:id="@+id/delete"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/kmTxt" />
-    </RelativeLayout>
+            android:layout_marginBottom="10dp"
+            android:src="@drawable/trash"/>
 
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp" >
+    </LinearLayout>
 
-        <TextView
-            android:id="@+id/samochodTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/samochod" />
-
-        <TextView
-            android:id="@+id/samochod"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/samochodTxt" />
-    </RelativeLayout>
-
-    <RelativeLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:layout_marginBottom="10dp" >
-
-        <TextView
-            android:id="@+id/dataTxt"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/data" />
-
-        <TextView
-            android:id="@+id/data"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="5dp"
-            android:layout_toRightOf="@+id/dataTxt" />
-    </RelativeLayout>
-
-    </LinearLayout> 
-    
-   
-   <LinearLayout 
-       android:layout_width="match_parent"
-       android:layout_height="match_parent"
-       android:orientation="vertical"
-       android:gravity="center"
-       >
-       
-       <Button 
-           android:id="@+id/delete"
-           android:layout_marginBottom="10dp"
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:text="delete"
-           
-           />
-   </LinearLayout>
-    
 </LinearLayout>
-
