--- a/res/layout/fragment_raport.xml
+++ b/res/layout/fragment_raport.xml
@@ -4,12 +4,33 @@
     android:layout_height="match_parent"
     android:orientation="vertical" >
     
+    <LinearLayout 
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        android:orientation="vertical">
+
+        <DatePicker
+            android:id="@+id/datePicker1"
+            style="@style/_AppTheme"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:calendarViewShown="false" />
+
+        <DatePicker
+            android:id="@+id/datePicker2"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:calendarViewShown="false" />
+        
+    </LinearLayout>
+    
     
     <Button 
         android:id="@+id/generuj_pdf"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="generuj pdf na sdcard"
+        android:layout_gravity="center"
+        android:text="pobierz raport"
         
         />
     
@@ -18,6 +39,7 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="pokaz pdf"
+	    android:visibility="invisible"
 	    />
     
 	
@@ -26,7 +48,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="generuj pdf w pamieci"
-        
+        android:visibility="invisible"
         />
     
 	<Button 
@@ -34,6 +56,7 @@
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
 	    android:text="pokaz pdf z pamieci"
+	    android:visibility="invisible"
 	    />
 	
     
