--- a/res/layout/row_trasa.xml
+++ b/res/layout/row_trasa.xml
@@ -33,6 +33,18 @@
             android:layout_marginTop="5dp" >
 
             <pl.kilometrowka.components.ExTextView
+                android:id="@+id/samochod"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp" />
+        </RelativeLayout>
+        
+        <RelativeLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="5dp" >
+
+            <pl.kilometrowka.components.ExTextView
                 android:id="@+id/kmTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -49,29 +61,10 @@
         <RelativeLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="5dp" >
-
-            <pl.kilometrowka.components.ExTextView
-                android:id="@+id/samochodTxt"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@string/samochod" />
-
-            <pl.kilometrowka.components.ExTextView
-                android:id="@+id/samochod"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@+id/samochodTxt" />
-        </RelativeLayout>
-
-        <RelativeLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
             android:layout_marginBottom="10dp"
             android:layout_marginTop="5dp" >
 
-            <pl.kilometrowka.components.ExTextView
+            <!-- pl.kilometrowka.components.ExTextView
                 android:id="@+id/dataTxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -82,7 +75,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginLeft="5dp"
-                android:layout_toRightOf="@+id/dataTxt" />
+                android:layout_toRightOf="@+id/dataTxt" /-->
         </RelativeLayout>
     </LinearLayout>
 
