--- a/res/layout/fragment_kalendarz.xml
+++ b/res/layout/fragment_kalendarz.xml
@@ -8,14 +8,15 @@
         android:id="@+id/calendar_view"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="90" />
+        android:layout_weight="100" />
 
     
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="0dp"
-       android:layout_weight="10"
+       android:layout_weight="0"
        android:gravity="center" 
+       android:visibility="invisible"
         >
     <Button
         android:id="@+id/pokazListeTras"
